# automata

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  regex_grammar.txt
include/: minigrep_utils.h
include/automata/: automata.h
include/automataio/: read_automata.h  write_automata.h
include/parser/: parser.h
include/utils/: intlist.h  intset.h
src/: minigrep.c  minigrep_utils.c  parse.c
src/automata/: automata.c  automata_ops.c
src/automataio/: read_automata.c  write_automata.c
src/parser/: parser.c
src/utils/: intlist.c  intset.c
tests/: test_automata.c  test_automata_ops.c  test_integrity.c  test_integrity2.c  test_intlist.c  test_intset.c  test_minigrep.c  test_minimize.c  test_parser.c  test_parser_build_automaton.c
tests/files/: test_integrity2_a.dot  test_integrity2_b.dot  test_integrity2_c.dot
